# piscine_python

./: .gitignore  README.md  requirements.txt
Module00/ex09/lmoran_pack/src/lmoran_pack_lmoran/: count_types.py
ex00/: Hello.py
ex02/: find_ft_type.py
ex04/: whatis.py
ex05/: building.py
ex06/: ft_filter.py
ex07/: sos.py
ex08/: Loading.py  tester.py
ex09/: testing_package.py
ex09/lmoran_pack/: pyproject.toml
py0/: .gitignore
py0/ex01/: format_ft_time.py
py0/ex03/: NULL_not_found.py
py00/ex01/: format_ft_time.py
py00/ex03/: NULL_not_found.py
py00/ex06/: filterstring.py
py00/ex08/: Loading.py
py00/ex09/lmoran_pack/: README.md
py01/ex00/: give_bmi.py
py01/ex01/: array2D.py
